--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@
         <p>desguace (tapadera) ezú</p>
     </header>
     <p>HOLA</p>
+    <main>
+        <p>ejemplo 1</p>
+    </main>
 </html>
