--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <p>desguace (tapadera) ezú</p>
     </header>
     <p>HOLA</p>
+    <nav>
+    </nav>
     <main>
         <p>ejemplo 1</p>
     </main>
